crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_performance_mode_all_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: modes
---
[
    Latency,
    Throughput,
    Balanced,
    Conservative,
]
