crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_profiler_config_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: cfg
---
ProfilerConfig {
    enabled: true,
    record_memory: false,
    warmup_iterations: 0,
    sample_size: 1,
}
