crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_profiler_config_json_custom.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: json
---
{
  "enabled": true,
  "record_memory": true,
  "warmup_iterations": 5,
  "sample_size": 20
}
