crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_profiler_config_json_default.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: json
---
{
  "enabled": true,
  "record_memory": false,
  "warmup_iterations": 0,
  "sample_size": 1
}
