crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_profiler_config_with_memory.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: cfg
---
ProfilerConfig {
    enabled: true,
    record_memory: true,
    warmup_iterations: 3,
    sample_size: 10,
}
