crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_stop_reason_all_display.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: displays
---
[
    "max_tokens",
    "time_limit",
    "memory_limit",
    "end_of_sequence",
    "user_stop",
]
