crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_stop_reason_eos_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: "StopReason::EndOfSequence"
---
EndOfSequence
