crates/bitnet-inference/tests/snapshots/snapshot_wave26_inference__w26_stop_reason_max_tokens_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave26_inference.rs
expression: "StopReason::MaxTokens"
---
MaxTokens
